<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_pay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".PayFragment">

    <Spinner
        android:id="@+id/pay_finalstation"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/FinalStation"
        app:layout_constraintStart_toStartOf="@+id/pay_finalstation"
        app:layout_constraintTop_toBottomOf="@+id/pay_initialstation" />

    <Spinner
        android:id="@+id/pay_initialstation"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTintMode="src_in"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pay_textView10" />

    <TextView
        android:id="@+id/pay_textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/InitialStation"
        app:layout_constraintStart_toStartOf="@+id/pay_initialstation"
        app:layout_constraintTop_toBottomOf="@+id/pay_pay_type" />

    <Spinner
        android:id="@+id/pay_pay_type"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pay_textView8"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/pay_textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/TypeTransport"
        app:layout_constraintStart_toStartOf="@+id/pay_pay_type"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pay_textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/PriceText"
        app:layout_constraintStart_toStartOf="@+id/pay_finalstation"
        app:layout_constraintTop_toBottomOf="@+id/pay_finalstation" />

    <TextView
        android:id="@+id/pay_textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/TimeText"
        app:layout_constraintStart_toStartOf="@+id/pay_textView12"
        app:layout_constraintTop_toBottomOf="@+id/pay_textView12" />

    <TextView
        android:id="@+id/pay_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/pay_textView12"
        app:layout_constraintStart_toEndOf="@+id/pay_textView12" />

    <TextView
        android:id="@+id/pay_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/pay_textView13"
        app:layout_constraintStart_toEndOf="@+id/pay_textView13" />
</androidx.constraintlayout.widget.ConstraintLayout>